--- a/build.xml
+++ b/build.xml
@@ -2,6 +2,7 @@
 
     <property file="build.properties"/>
     <property environment="env"/>
+    <property name="target" value="./sample"/>
 
     <!-- Setting default value for username, password and session id properties to empty string 
          so unset values are treated as empty. Without this, ant expressions such as ${sf.username}
@@ -17,13 +18,13 @@
         </classpath>
     </taskdef>
 	
-    <!-- Test out deploy and retrieve verbs for package 'mypkg' -->
+    <!-- Test out deploy and retrieve verbs for package '${target}' -->
     <target name="test">
-      <!-- Upload the contents of the "mypkg" package -->
-      <sf:deploy username="${sf.username}" password="${sf.password}" sessionId="${sf.sessionId}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" deployRoot="mypkg" rollbackOnError="true"/>
+      <!-- Upload the contents of the "${target}" package -->
+      <sf:deploy username="${sf.username}" password="${sf.password}" sessionId="${sf.sessionId}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" deployRoot="${target}" rollbackOnError="true"/>
       <mkdir dir="retrieveOutput"/>
       <!-- Retrieve the contents into another directory -->
-      <sf:retrieve username="${sf.username}" password="${sf.password}" sessionId="${sf.sessionId}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" retrieveTarget="retrieveOutput" packageNames="MyPkg"/>
+      <sf:retrieve username="${sf.username}" password="${sf.password}" sessionId="${sf.sessionId}" serverurl="${sf.serverurl}" maxPoll="${sf.maxPoll}" retrieveTarget="retrieveOutput" packageNames="${target}"/>
     </target>
 
     <!-- Retrieve an unpackaged set of metadata from your org -->
