--- a/build.properties
+++ b/build.properties
@@ -3,7 +3,7 @@
 
 # Specify the login credentials for the desired Salesforce organization
 sf.username = kamalesh@personal.sandbox
-sf.password = Cobrajack@69512
+sf.password = L6vnN0YT3PgfEwPKNDe5uEBN
 #sf.sessionId = <Insert your Salesforce session id here.  Use this or username/password above.  Cannot use both>
 #sf.pkgName = <Insert comma separated package names to be retrieved>
 #sf.zipFile = <Insert path of the zipfile to be retrieved>
@@ -13,7 +13,7 @@ sf.password = Cobrajack@69512
 # Use 'https://test.salesforce.com for sandbox.
 sf.serverurl = https://login.salesforce.com
 
-sf.maxPoll = 20
+sf.maxPoll = 100
 # If your network requires an HTTP proxy, see http://ant.apache.org/manual/proxy.html for configuration.
 #
 
