--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 
     <property file="build.properties"/>
     <property environment="env"/>
-    <property name="target" value="./sample"/>
+    <property name="target" value="./src"/>
 
     <!-- Setting default value for username, password and session id properties to empty string 
          so unset values are treated as empty. Without this, ant expressions such as ${sf.username}
