--- a/src/package.xml
+++ b/src/package.xml
@@ -9,5 +9,9 @@
         <members>SampleAccountTrigger</members>
         <name>ApexTrigger</name>
     </types>
+    <types>
+        <members>myobj__c</members>
+        <name>CustomObject</name>
+    </types>
     <version>58.0</version>
 </Package>
