--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,4 +2,4 @@ sonar.host.url="https://sonarcloud.io"
 sonar.organization=salesforce-scan
 sonar.projectKey="kamalesh69512_salesforce_sample"
 sonar.projectVersion=“1.0”
-sonar.sources="sample"
+sonar.sources="src"
